# pallet-ordinals

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/index/: updater.rs
